--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+Flask==1.1.4
 flask_migrate==2.3.0
 flask_script==2.0.6
-psycopg2==2.7.5
+psycopg2-binary==2.9.7
+Jinja2==2.11.3
+MarkupSafe==2.0.1
+flask-bcrypt==0.7.1
+Flask-SQLAlchemy==2.5.1
+SQLAlchemy==1.4.47
