--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   backend:
     build:
@@ -10,6 +8,7 @@ services:
       - "5000:5000"
     environment:
       DATABASE_URL: postgresql://postgres:postgres@db:5432/mydb
+      SQLALCHEMY_DATABASE_URI: postgresql://postgres:postgres@db:5432/mydb
     depends_on:
       - db
 
